Added Glow, Offset filters

--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1684,4 +1684,5 @@
     <string name="dog">DoG</string>
     <string name="second_radius">Second radius</string>
     <string name="equalize">Equalize</string>
+    <string name="glow">Glow</string>
 </resources>
