--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1685,4 +1685,5 @@
     <string name="second_radius">Second radius</string>
     <string name="equalize">Equalize</string>
     <string name="glow">Glow</string>
+    <string name="whirl_and_pinch">Whirl and Pinch</string>
 </resources>
