Added twirl filter

--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1699,4 +1699,5 @@
     <string name="y_gap">Y Gap</string>
     <string name="x_width">X Width</string>
     <string name="y_wdth">Y Width</string>
+    <string name="twirl">Twirl</string>
 </resources>
