Added Rubber stamp filter

--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1700,4 +1700,5 @@
     <string name="x_width">X Width</string>
     <string name="y_wdth">Y Width</string>
     <string name="twirl">Twirl</string>
+    <string name="rubber_stmp">Rubber Stamp</string>
 </resources>
