Added Sphere Lens Distortion filter

--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1704,4 +1704,6 @@
     <string name="smear">Smear</string>
     <string name="density">Density</string>
     <string name="mix">Mix</string>
+    <string name="sphere_lensh_distortion">Sphere Lens Distortion</string>
+    <string name="refraction_index">Refraction index</string>
 </resources>
