--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1735,4 +1735,6 @@
     <string name="auto_perspective">Perspective Auto</string>
     <string name="deskew">Deskew</string>
     <string name="allow_crop">Allow crop</string>
+    <string name="crop_or_perspective">Crop or Perspective</string>
+    <string name="absolute">Absolute</string>
 </resources>
