--- a/core/resources/src/main/res/values-ru/strings.xml
+++ b/core/resources/src/main/res/values-ru/strings.xml
@@ -14,7 +14,8 @@
   ~
   ~ You should have received a copy of the Apache License
   ~ along with this program.  If not, see <http://www.apache.org/licenses/LICENSE-2.0>.
-  --><resources>
+  -->
+<resources>
     <string name="smth_went_wrong">Что-то пошло не так: %1$s</string>
     <string name="size">Размер %1$s</string>
     <string name="loading">Загрузка…</string>
@@ -1572,4 +1573,155 @@
     <string name="tool_exit_confirmation_sub">Если у вас есть несохраненные изменения при использовании определенных инструментов и вы пытаетесь закрыть их, то будет показано диалоговое окно подтверждения</string>
     <string name="image_cutting">Вырезание</string>
     <string name="clahe">CLAHE</string>
+    <string name="image_cutting_sub">Вырезать часть изображения и объединить левые части (можно инвертировать) вертикальными или горизонтальными линиями</string>
+    <string name="vertical_pivot_line">Вертикальная линия поворота</string>
+    <string name="horizontal_pivot_line">Горизонтальная линия поворота</string>
+    <string name="inverse_selection">Инвертировать выделение</string>
+    <string name="inverse_vertical_selection_sub">Вертикальная часть будет оставлена, вместо объединения частей вокруг области вырезания</string>
+    <string name="inverse_horizontal_selection_sub">Горизонтальная часть будет оставлена, вместо объединения частей вокруг области вырезания</string>
+    <string name="collection_mesh_gradients">Коллекция сеточных градиентов</string>
+    <string name="gradient_maker_type_image_mesh">Наложение сеточного градиента</string>
+    <string name="gradient_maker_type_image_mesh_sub">Наложить сеточный градиент на заданные изображения</string>
+    <string name="points_customization">Настройка точек</string>
+    <string name="grid_size">Размер сетки</string>
+    <string name="resolution_x">Разрешение X</string>
+    <string name="resolution_y">Разрешение Y</string>
+    <string name="resolution">Разрешение</string>
+    <string name="pixel_by_pixel">Попиксельно</string>
+    <string name="highlight_color">Цвет подсветки</string>
+    <string name="pixel_comparison_type">Сравнение пикселей Тип</string>
+    <string name="scan_barcode">Сканировать штрихкод</string>
+    <string name="height_ratio">Соотношение высоты</string>
+    <string name="barcode_type">Тип штрихкода</string>
+    <string name="enforce_bw">Принудительно использовать ч/б</string>
+    <string name="enforce_bw_sub">Изображение штрихкода будет полностью чёрно-белым и не будет раскрашено темой приложения</string>
+    <string name="barcodes_sub">Отсканируйте любой штрихкод (QR, EAN, AZTEC и т. д.) и получите его содержимое или вставьте свой текст для создания нового</string>
+    <string name="no_barcode_found">Штрихкод не найден</string>
+    <string name="generated_barcode_will_be_here">Сгенерированный штрихкод будет здесь</string>
+    <string name="audio_cover_extractor">Аудиообложки</string>
+    <string name="audio_cover_extractor_sub">Извлечение обложек альбомов из аудиофайлов. Поддерживаются большинство распространённых форматов.</string>
+    <string name="pick_audio_to_start">Выберите аудио для начала.</string>
+    <string name="pick_audio">Выберите аудио.</string>
+    <string name="no_covers_found">Обложки не найдены.</string>
+    <string name="send_logs">Отправить логи.</string>
+    <string name="send_logs_sub">Нажмите, чтобы поделиться файлом журнала приложения. Это поможет мне выявить и устранить проблему.</string>
+    <string name="crash_title">Упс… Что-то пошло не так.</string>
+    <string name="crash_subtitle">Вы можете связаться со мной, используя указанные ниже способы, и я постараюсь найти решение.\n(Не забудьте прикрепить логи.)</string>
+    <string name="ocr_write_to_file">Записать в файл.</string>
+    <string name="ocr_write_to_file_sub">Извлечение текста из пакета изображений и сохранение его в одном текстовом файле</string>
+    <string name="ocr_write_to_metadata">Запись в метаданные</string>
+    <string name="ocr_write_to_metadata_sub">Извлечение теsкста из каждого изображения и его размещение в EXIF-данных соответствующих фотографий</string>
+    <string name="invisible_mode">Невидимый режим</string>
+    <string name="invisible_mode_sub">Использование стеганографии для создания невидимых глазу водяных знаков внутри байтов ваших изображений</string>
+    <string name="use_lsb">Использование LSB</string>
+    <string name="use_lsb_sub">Будет использоваться метод стеганографии LSB (младший значащий бит), в противном случае — FD (частотная область)</string>
+    <string name="auto_remove_red_eyes">Автоматическое удаление красного Глаза</string>
+    <string name="password">Пароль</string>
+    <string name="unlock">Разблокировать</string>
+    <string name="pdf_is_protected">PDF-файл защищён</string>
+    <string name="operation_almost_complete">Операция почти завершена. Если вы отмените сейчас, потребуется перезапустить его.</string>
+    <string name="sort_by_date_modified">Дата изменения</string>
+    <string name="sort_by_date_modified_reversed">Дата изменения (обратная)</string>
+    <string name="sort_by_size">Размер</string>
+    <string name="sort_by_size_reversed">Размер (обратная)</string>
+    <string name="sort_by_mime_type">Тип MIME</string>
+    <string name="sort_by_mime_type_reversed">Тип MIME (обратная)</string>
+    <string name="sort_by_extension">Расширение</string>
+    <string name="sort_by_extension_reversed">Расширение (обратная)</string>
+    <string name="sort_by_date_added">Дата Добавлено</string>
+    <string name="sort_by_date_added_reversed">Дата добавления (в обратном порядке)</string>
+    <string name="left_to_right">Слева направо</string>
+    <string name="right_to_left">Справа налево</string>
+    <string name="top_to_bottom">Сверху вниз</string>
+    <string name="bottom_to_top">Снизу вверх</string>
+    <string name="liquid_glass">Жидкое стекло</string>
+    <string name="liquid_glass_sub">Переключатель на основе недавно анонсированной iOS 26 и её системы дизайна «жидкое стекло»</string>
+    <string name="pick_image_or_base64">Выберите изображение или вставьте/импортируйте данные Base64 ниже</string>
+    <string name="type_image_link">Введите ссылку на изображение, чтобы начать</string>
+    <string name="paste_link">Вставить ссылку</string>
+    <string name="kaleidoscope">Калейдоскоп</string>
+    <string name="secondary_angle">Дополнительный угол</string>
+    <string name="sides">Стороны</string>
+    <string name="channel_mix">Микс каналов</string>
+    <string name="blue_green">Сине-зелёный</string>
+    <string name="red_blue">Красный-синий</string>
+    <string name="green_red">Зелёный-красный</string>
+    <string name="into_red">В красный</string>
+    <string name="into_green">В зелёный</string>
+    <string name="into_blue">В синий</string>
+    <string name="cyan">Голубой</string>
+    <string name="magenta">Пурпурный</string>
+    <string name="yellow">Жёлтый</string>
+    <string name="color_halftone">Цветной полутон</string>
+    <string name="contour">Контур</string>
+    <string name="levels">Уровни</string>
+    <string name="offset">Смещение</string>
+    <string name="voronoi_crystallize">Кристаллизация Вороного</string>
+    <string name="shape">Форма</string>
+    <string name="stretch">Растяжение</string>
+    <string name="randomness">Случайность</string>
+    <string name="despeckle">Устранение спеклов</string>
+    <string name="diffuse">Рассеивание</string>
+    <string name="dog">DoG</string>
+    <string name="second_radius">Второй радиус</string>
+    <string name="equalize">Выровнять</string>
+    <string name="glow">Свечение</string>
+    <string name="whirl_and_pinch">Вихрь и сжатие</string>
+    <string name="pointillize">Пунктирование</string>
+    <string name="border_color">Цвет границы</string>
+    <string name="polar_coordinates">Полярные координаты</string>
+    <string name="rect_to_polar">Прямоугольная в полярную</string>
+    <string name="polar_to_rect">Полярная в прямоугольную</string>
+    <string name="invert_in_circle">Инвертировать в круг</string>
+    <string name="reduce_noise">Уменьшить шум</string>
+    <string name="simple_solarize">Простая Соляризация</string>
+    <string name="weave">Плетение</string>
+    <string name="x_gap">Зазор по оси X</string>
+    <string name="y_gap">Зазор по оси Y</string>
+    <string name="x_width">Ширина по оси X</string>
+    <string name="y_wdth">Ширина по оси Y</string>
+    <string name="twirl">Закручивание</string>
+    <string name="rubber_stmp">Резиновый штамп</string>
+    <string name="smear">Размазывание</string>
+    <string name="density">Плотность</string>
+    <string name="mix">Смешивание</string>
+    <string name="sphere_lensh_distortion">Искажение сферической линзы</string>
+    <string name="refraction_index">Показатель преломления</string>
+    <string name="arc">Дуга</string>
+    <string name="spread_angle">Угол рассеивания</string>
+    <string name="sparkle">Блеск</string>
+    <string name="rays">Лучи</string>
+    <string name="ascii">ASCII</string>
+    <string name="gradient">Градиент</string>
+    <string name="moire">Муар</string>
+    <string name="autumn">Осень</string>
+    <string name="bone">Кость</string>
+    <string name="jet">Струйный</string>
+    <string name="winter">Зима</string>
+    <string name="ocean">Океан</string>
+    <string name="summer">Лето</string>
+    <string name="spring">Весна</string>
+    <string name="cool_variant">Прохладный вариант</string>
+    <string name="hsv">HSV</string>
+    <string name="pink">Розовый</string>
+    <string name="hot">Горячий</string>
+    <string name="parula">Парула</string>
+    <string name="magma">Магма</string>
+    <string name="inferno">Инферно</string>
+    <string name="plasma">Плазма</string>
+    <string name="viridis">Зелёный</string>
+    <string name="cividis">Цивидис</string>
+    <string name="twilight">Сумерки</string>
+    <string name="twilight_shifted">Сумерки со смещением</string>
+    <string name="auto_perspective">Автоперспектива</string>
+    <string name="deskew">Выравнивание</string>
+    <string name="allow_crop">Разрешить кадрирование</string>
+    <string name="crop_or_perspective">Кадрирование или перспектива</string>
+    <string name="absolute">Абсолютный</string>
+    <string name="turbo">Турбо</string>
+    <string name="deep_green">Темно-зелёный</string>
+    <string name="lens_correction">Коррекция объектива</string>
+    <string name="target_lens_profile">Целевой файл профиля объектива в формате JSON</string>
+    <string name="download_ready_lens_profiles">Скачать готовые профили объектива</string>
+    <string name="part_percents">Проценты частей</string>
 </resources>
