Added seam carving filter by #2172

--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1749,4 +1749,5 @@
     <string name="part_percents">Part percents</string>
     <string name="export_as_json">Export as JSON</string>
     <string name="export_as_json_sub">Copy string with a palette data as json representation</string>
+    <string name="seam_carving">Seam Carving</string>
 </resources>
