--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1766,4 +1766,6 @@
     <string name="ascii_art_sub">Convert picture to ascii text which will look like image</string>
     <string name="params">Params</string>
     <string name="invert_colors_ascii_sub">Apllies negative filter to image for better result in some cases</string>
+    <string name="processing_screenshot">Processing screenshot</string>
+    <string name="screenshot_not_captured_try_again">Screenshot not captured, try again</string>
 </resources>
